@@ -3,10 +3,13 @@
 	* Tools/autogsdoc.m: Simplify by removing SourceDirectory default.
 	Change mechanism for handling multiple source files for one header
 	(need capability to write dependency rules for make).
-	* Tools/AGSPasrser.[hm]: Add mechanism to return list of source
+	* Tools/AGSParser.[hm]: Add mechanism to return list of source
 	files on which a document depends.
+	* Tools/gsdoc-0_6_7.dtd: Permit wider use of index element.
+	* Tools/AGSHtml.m: ditto
 	* Source/GNUmakefile (Base_AGSDOC_FLAGS): Remove the SourceDirectory
 	option ... now assumed to be the current directory for simplicity.
+	* Source/Base.gsdoc: Add class and protocol indexes.
 
 2002-01-04  Richard Frith-Macdonald <rfm@gnu.org>
 
